--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -7,19 +7,13 @@ thead{
     text-align: left;
 }
 .col1{
-    display: flex;
-    height: 75%;
-    width: 25%;
-    justify-content: center;
+    flex: 2;
     
 }
 .col2 {
-    display: flex;
-    height: 100%;
-    width: 75%;
-    justify-content: center;
-    background-color: aqua;
+    flex: 3;
 }
+
 
 h1{
     
